# simple-http-server

./: Cargo.toml  README.md
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/request/: Cargo.toml
crates/response/: Cargo.toml
crates/response/src/: lib.rs
crates/router/: Cargo.toml
crates/router/src/: lib.rs  node.rs
examples/: echo.rs  file_upload.rs  hello_world.rs  priority_routing.rs  request_headers.rs  static_website.rs
examples/gallery/: gallery.js  index.html  style.css
examples/gallery/images/: README.md
examples/static/: index.html  style.css
src/: lib.rs  request.rs  response.rs  route_matcher.rs
