[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                        # error handling
bytes = "1.3.0"                          # helps manage buffers
env_logger = "0.11.7"
log = "0.4.27"
thiserror = "1.0.38"                     # error handling
rthttp_request = { path = "../request" }
rthttp_router = { path = "../router" }
rthttp_response = { path = "../response" }
