[package]
name = "rthttp_router"
version = "0.1.0"
authors = ["Dejan Gitin <dejan871@protonmail.com>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
rthttp_request = { path = "../request" }
rthttp_response = { path = "../response" }
log = "0.4.27"
flate2 = { version = "1.0.17", features = ["zlib-rs"], default-features = false }
